deploy/minikube/sso/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-endpoint
  labels:
    app: keycloak-endpoint
spec:
  type: NodePort
  selector:
    app: keycloak
    component: keycloak
  ports:
    - name: endpoint
      protocol: TCP
      port: 80
      targetPort: 8080
